# dev-clipor

./: .gitignore  README-ja.md  README.en.md  README.md  c0-coverage.json  c1-coverage.json  c2-coverage.json
.claude/: settings.json  settings.local.json
.claude/skills/commit/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: build-clipor.yml  cd-clipor.yml  ci-clipor.yml  deploy-pages.yml
clipor/: index.html  package-lock.json  package.json  vite.config.ts  vitest-report.json
clipor/scripts/: sync-version.mjs
clipor/src/: App.tsx  i18n.ts  main.tsx
clipor/src-tauri/: AppxManifest.xml  Cargo.toml  tauri.conf.json
clipor/src-tauri/capabilities/: default.json
clipor/src-tauri/icons/: icon.icns
clipor/src-tauri/src/: lib.rs  main.rs
clipor/src-tauri/src/commands/: clipboard.rs  mod.rs  preview.rs  settings.rs  template.rs
clipor/src-tauri/src/models/: app_settings.rs  clipboard_entry.rs  mod.rs  template.rs
clipor/src-tauri/src/native/: win32.rs
clipor/src-tauri/src/services/: clipboard_history_store.rs  clipboard_monitor.rs  crypto_service.rs  hotkey_detector.rs  image_util.rs  mod.rs  paste_service.rs  settings_service.rs  template_store.rs
clipor/src/components/: AppErrorBoundary.tsx  ClipboardItem.tsx  Pagination.tsx  (+8 more)
docs/pages/: index.html  privacy.html  site-privacy.html  style.css
docs/plan/: clipboard-manager-plan.md  cloudflare_R2_releases.md  smartscreen-codesigning-plan.md
docs/requirements/: msix-runFullTrust-capability.md
docs/tasks/: clipboard-manager-followups.md
(+26 files in other folders)
